--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Testes com Cypress</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   </head>
   <body>
@@ -14,36 +14,41 @@
         <span class="navbar-brand mb-0 h1">Formulário para teste Cypress</span>
         </div>
     </nav>
-    <div class="container my-5 py-5 bg-dark-subtle" >
-        <div class="mb-3">
-            <label for="email" class="form-label">Email </label>
-            <input type="email" class="form-control" id="email" placeholder="name@example.com">
+    <div class="container my-5 pt-4 border border-dark-subtle rounded" >
+        <div class="title-form mb-5">
+            <h3 class="text-center">Formulário de contato</h3>
+            <p class="text-center">Criado para estudo de teste da ferramenta Cypress</p>
         </div>
-        <div class="mb-3">
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="genero" id="genero1">
-                <label class="form-check-label" for="genero1">
-                Feminino
+        <form>
+            <!-- Name input -->
+            <div class="form-outline mb-4">
+                <input type="text" id="form4Example1" class="form-control" />
+                <label class="form-label" for="form4Example1">Name</label>
+            </div>
+
+            <!-- Email input -->
+            <div class="form-outline mb-4">
+                <input type="email" id="form4Example2" class="form-control" />
+                <label class="form-label" for="form4Example2">Email address</label>
+            </div>
+
+            <!-- Message input -->
+            <div class="form-outline mb-4">
+                <textarea class="form-control" id="form4Example3" rows="4"></textarea>
+                <label class="form-label" for="form4Example3">Message</label>
+            </div>
+
+            <!-- Checkbox -->
+            <div class="form-check d-flex justify-content-center mb-4">
+                <input class="form-check-input me-2" type="checkbox" value="" id="form4Example4" checked />
+                <label class="form-check-label" for="form4Example4">
+                Send me a copy of this message
                 </label>
             </div>
-        
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="genero" id="genero2" >
-                <label class="form-check-label" for="genero2">
-                Masculino
-            </label>
-            </div>
-            <div class="form-check">
-                <input class="form-check-input" type="radio" name="genero" id="genero3" >
-                <label class="form-check-label" for="genero3">
-                Outros
-            </label>
-            </div>
-        </div>
-        <div class="mb-3">
-            <label for="texto" class="form-label">Observações</label>
-            <textarea class="form-control" id="texto" rows="3"></textarea>
-        </div>
+
+            <!-- Submit button -->
+            <button type="submit" class="btn btn-primary btn-block mb-4">Send</button>
+        </form>
 
     </div>
 
